--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "Twitter, Inc."
   ],
   "scripts": {
+    "build": "npm-run-all --parallel lint css js docs test",
     "start": "npm-run-all --parallel watch docs-serve",
     "bundlewatch": "bundlewatch --config .bundlewatch.config.json",
     "css": "npm-run-all css-compile css-prefix css-rtl css-minify",
@@ -108,7 +109,7 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.2.5",
     "bundlewatch": "^0.3.2",
     "clean-css-cli": "^5.2.1",
     "cross-env": "^7.0.3",
@@ -136,7 +137,7 @@
     "lockfile-lint": "^4.6.2",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.7",
     "postcss-cli": "^8.3.1",
     "rollup": "^2.40.0",
     "rollup-plugin-istanbul": "^3.0.0",
